crates/ruff/src/rules/flake8_comprehensions/snapshots/ruff__rules__flake8_comprehensions__tests__C403_C403.py.snap
---
source: crates/ruff/src/rules/flake8_comprehensions/mod.rs
expression: diagnostics
---
- kind:
    name: UnnecessaryListComprehensionSet
    body: "Unnecessary `list` comprehension (rewrite as a `set` comprehension)"
    suggestion: "Rewrite as a `set` comprehension"
    fixable: true
  location:
    row: 1
    column: 4
  end_location:
    row: 1
    column: 30
  fix:
    edits:
      - location:
          row: 1
          column: 4
        end_location:
          row: 1
          column: 30
        content: "{x for x in range(3)}"
  parent: ~
- kind:
    name: UnnecessaryListComprehensionSet
    body: "Unnecessary `list` comprehension (rewrite as a `set` comprehension)"
    suggestion: "Rewrite as a `set` comprehension"
    fixable: true
  location:
    row: 2
    column: 4
  end_location:
    row: 4
    column: 1
  fix:
    edits:
      - location:
          row: 2
          column: 4
        end_location:
          row: 4
          column: 1
        content: "{\n    x for x in range(3)\n}"
  parent: ~

