crates/ruff/src/rules/flake8_comprehensions/snapshots/ruff__rules__flake8_comprehensions__tests__C406_C406.py.snap
---
source: crates/ruff/src/rules/flake8_comprehensions/mod.rs
expression: diagnostics
---
- kind:
    name: UnnecessaryLiteralDict
    body: "Unnecessary `list` literal (rewrite as a `dict` literal)"
    commit: "Rewrite as a `dict` literal"
    fixable: true
  location:
    row: 1
    column: 5
  end_location:
    row: 1
    column: 19
  fix:
    content: "{1: 2}"
    location:
      row: 1
      column: 5
    end_location:
      row: 1
      column: 19
  parent: ~
- kind:
    name: UnnecessaryLiteralDict
    body: "Unnecessary `tuple` literal (rewrite as a `dict` literal)"
    commit: "Rewrite as a `dict` literal"
    fixable: true
  location:
    row: 2
    column: 5
  end_location:
    row: 2
    column: 20
  fix:
    content: "{1: 2,}"
    location:
      row: 2
      column: 5
    end_location:
      row: 2
      column: 20
  parent: ~
- kind:
    name: UnnecessaryLiteralDict
    body: "Unnecessary `list` literal (rewrite as a `dict` literal)"
    commit: "Rewrite as a `dict` literal"
    fixable: true
  location:
    row: 3
    column: 5
  end_location:
    row: 3
    column: 13
  fix:
    content: "{}"
    location:
      row: 3
      column: 5
    end_location:
      row: 3
      column: 13
  parent: ~
- kind:
    name: UnnecessaryLiteralDict
    body: "Unnecessary `tuple` literal (rewrite as a `dict` literal)"
    commit: "Rewrite as a `dict` literal"
    fixable: true
  location:
    row: 4
    column: 5
  end_location:
    row: 4
    column: 13
  fix:
    content: "{}"
    location:
      row: 4
      column: 5
    end_location:
      row: 4
      column: 13
  parent: ~

