crates/ruff/src/rules/flake8_comprehensions/snapshots/ruff__rules__flake8_comprehensions__tests__C408_C408.py.snap
---
source: crates/ruff/src/rules/flake8_comprehensions/mod.rs
expression: diagnostics
---
- kind:
    name: UnnecessaryCollectionCall
    body: "Unnecessary `tuple` call (rewrite as a literal)"
    commit: Rewrite as a literal
    fixable: true
  location:
    row: 1
    column: 4
  end_location:
    row: 1
    column: 11
  fix:
    content: ()
    location:
      row: 1
      column: 4
    end_location:
      row: 1
      column: 11
  parent: ~
- kind:
    name: UnnecessaryCollectionCall
    body: "Unnecessary `list` call (rewrite as a literal)"
    commit: Rewrite as a literal
    fixable: true
  location:
    row: 2
    column: 4
  end_location:
    row: 2
    column: 10
  fix:
    content: "[]"
    location:
      row: 2
      column: 4
    end_location:
      row: 2
      column: 10
  parent: ~
- kind:
    name: UnnecessaryCollectionCall
    body: "Unnecessary `dict` call (rewrite as a literal)"
    commit: Rewrite as a literal
    fixable: true
  location:
    row: 3
    column: 5
  end_location:
    row: 3
    column: 11
  fix:
    content: "{}"
    location:
      row: 3
      column: 5
    end_location:
      row: 3
      column: 11
  parent: ~
- kind:
    name: UnnecessaryCollectionCall
    body: "Unnecessary `dict` call (rewrite as a literal)"
    commit: Rewrite as a literal
    fixable: true
  location:
    row: 4
    column: 5
  end_location:
    row: 4
    column: 14
  fix:
    content: "{\"a\": 1}"
    location:
      row: 4
      column: 5
    end_location:
      row: 4
      column: 14
  parent: ~

