crates/ruff/src/rules/flake8_comprehensions/snapshots/ruff__rules__flake8_comprehensions__tests__C408_C408.py_allow_dict_calls_with_keyword_arguments.snap
---
source: crates/ruff/src/rules/flake8_comprehensions/mod.rs
expression: diagnostics
---
- kind:
    name: UnnecessaryCollectionCall
    body: "Unnecessary `tuple` call (rewrite as a literal)"
    suggestion: Rewrite as a literal
    fixable: true
  location:
    row: 1
    column: 4
  end_location:
    row: 1
    column: 11
  fix:
    edits:
      - location:
          row: 1
          column: 4
        end_location:
          row: 1
          column: 11
        content: ()
  parent: ~
- kind:
    name: UnnecessaryCollectionCall
    body: "Unnecessary `list` call (rewrite as a literal)"
    suggestion: Rewrite as a literal
    fixable: true
  location:
    row: 2
    column: 4
  end_location:
    row: 2
    column: 10
  fix:
    edits:
      - location:
          row: 2
          column: 4
        end_location:
          row: 2
          column: 10
        content: "[]"
  parent: ~
- kind:
    name: UnnecessaryCollectionCall
    body: "Unnecessary `dict` call (rewrite as a literal)"
    suggestion: Rewrite as a literal
    fixable: true
  location:
    row: 3
    column: 5
  end_location:
    row: 3
    column: 11
  fix:
    edits:
      - location:
          row: 3
          column: 5
        end_location:
          row: 3
          column: 11
        content: "{}"
  parent: ~

