crates/ruff/src/rules/flake8_comprehensions/snapshots/ruff__rules__flake8_comprehensions__tests__C409_C409.py.snap
---
source: crates/ruff/src/rules/flake8_comprehensions/mod.rs
expression: diagnostics
---
- kind:
    name: UnnecessaryLiteralWithinTupleCall
    body: "Unnecessary `list` literal passed to `tuple()` (rewrite as a `tuple` literal)"
    suggestion: "Rewrite as a `tuple` literal"
    fixable: true
  location:
    row: 1
    column: 5
  end_location:
    row: 1
    column: 14
  fix:
    edits:
      - location:
          row: 1
          column: 5
        end_location:
          row: 1
          column: 14
        content: ()
  parent: ~
- kind:
    name: UnnecessaryLiteralWithinTupleCall
    body: "Unnecessary `list` literal passed to `tuple()` (rewrite as a `tuple` literal)"
    suggestion: "Rewrite as a `tuple` literal"
    fixable: true
  location:
    row: 2
    column: 5
  end_location:
    row: 2
    column: 18
  fix:
    edits:
      - location:
          row: 2
          column: 5
        end_location:
          row: 2
          column: 18
        content: "(1, 2)"
  parent: ~
- kind:
    name: UnnecessaryLiteralWithinTupleCall
    body: "Unnecessary `tuple` literal passed to `tuple()` (remove the outer call to `tuple()`)"
    suggestion: "Remove outer `tuple` call"
    fixable: true
  location:
    row: 3
    column: 5
  end_location:
    row: 3
    column: 18
  fix:
    edits:
      - location:
          row: 3
          column: 5
        end_location:
          row: 3
          column: 18
        content: "(1, 2)"
  parent: ~
- kind:
    name: UnnecessaryLiteralWithinTupleCall
    body: "Unnecessary `list` literal passed to `tuple()` (rewrite as a `tuple` literal)"
    suggestion: "Rewrite as a `tuple` literal"
    fixable: true
  location:
    row: 4
    column: 5
  end_location:
    row: 7
    column: 2
  fix:
    edits:
      - location:
          row: 4
          column: 5
        end_location:
          row: 7
          column: 2
        content: "(\n    1,\n    2\n)"
  parent: ~
- kind:
    name: UnnecessaryLiteralWithinTupleCall
    body: "Unnecessary `tuple` literal passed to `tuple()` (remove the outer call to `tuple()`)"
    suggestion: "Remove outer `tuple` call"
    fixable: true
  location:
    row: 8
    column: 5
  end_location:
    row: 10
    column: 1
  fix:
    edits:
      - location:
          row: 8
          column: 5
        end_location:
          row: 10
          column: 1
        content: "(1, 2)"
  parent: ~

