crates/ruff/src/rules/flake8_comprehensions/snapshots/ruff__rules__flake8_comprehensions__tests__C410_C410.py.snap
---
source: crates/ruff/src/rules/flake8_comprehensions/mod.rs
expression: diagnostics
---
- kind:
    name: UnnecessaryLiteralWithinListCall
    body: "Unnecessary `list` literal passed to `list()` (remove the outer call to `list()`)"
    suggestion: "Remove outer `list` call"
    fixable: true
  location:
    row: 1
    column: 5
  end_location:
    row: 1
    column: 17
  fix:
    edits:
      - location:
          row: 1
          column: 5
        end_location:
          row: 1
          column: 17
        content: "[1, 2]"
  parent: ~
- kind:
    name: UnnecessaryLiteralWithinListCall
    body: "Unnecessary `tuple` literal passed to `list()` (rewrite as a `list` literal)"
    suggestion: "Rewrite as a `list` literal"
    fixable: true
  location:
    row: 2
    column: 5
  end_location:
    row: 2
    column: 17
  fix:
    edits:
      - location:
          row: 2
          column: 5
        end_location:
          row: 2
          column: 17
        content: "[1, 2]"
  parent: ~
- kind:
    name: UnnecessaryLiteralWithinListCall
    body: "Unnecessary `list` literal passed to `list()` (remove the outer call to `list()`)"
    suggestion: "Remove outer `list` call"
    fixable: true
  location:
    row: 3
    column: 5
  end_location:
    row: 3
    column: 13
  fix:
    edits:
      - location:
          row: 3
          column: 5
        end_location:
          row: 3
          column: 13
        content: "[]"
  parent: ~
- kind:
    name: UnnecessaryLiteralWithinListCall
    body: "Unnecessary `tuple` literal passed to `list()` (rewrite as a `list` literal)"
    suggestion: "Rewrite as a `list` literal"
    fixable: true
  location:
    row: 4
    column: 5
  end_location:
    row: 4
    column: 13
  fix:
    edits:
      - location:
          row: 4
          column: 5
        end_location:
          row: 4
          column: 13
        content: "[]"
  parent: ~

