crates/ruff/src/rules/flake8_comprehensions/snapshots/ruff__rules__flake8_comprehensions__tests__C411_C411.py.snap
---
source: crates/ruff/src/rules/flake8_comprehensions/mod.rs
---
./resources/test/fixtures/flake8_comprehensions/C411.py:2:1: C411 [*] Unnecessary `list` call (remove the outer call to `list()`)
  |
2 | x = [1, 2, 3]
3 | list([i for i in x])
  | ^^^^^^^^^^^^^^^^^^^^ C411
  |
  = help: Remove outer `list` call

ℹ Suggested fix
1 1 | x = [1, 2, 3]
2   |-list([i for i in x])
  2 |+[i for i in x]


